Add some structure in index

--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
 </head>
 <body>
 
+  <!-- general container -->
+  <div class="wrapper">
+
+    <!-- container -->
+    <div class="card">
+      <div class="card-body">
+        <!-- second container for qrcode -->
+        <div class="card">
+          <img src="./images/image-qr-code.png" alt="qr-code-image">
+        </div>
+        <!-- /second container for qrcode -->
+      </div>
+    </div>
+    <!-- /container -->
+  </div>
+  <!-- /general container -->
+
   Improve your front-end skills by building projects
 
   Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
