--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <link rel="stylesheet" href="./CSS/style.css">
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <!-- fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
   <!-- tab title -->
   <title>Frontend Mentor | QR code component</title>
 
@@ -24,26 +28,33 @@
   <div class="wrapper">
 
     <!-- container -->
-    <div class="card">
-      <div class="card-body">
-        <!-- second container for qrcode -->
-        <div class="card">
-          <img src="./images/image-qr-code.png" alt="qr-code-image">
-        </div>
-        <!-- /second container for qrcode -->
+    <div class="border border-1 rounded-4 p-4">
+
+      <!-- second container for qrcode -->
+      <div class="qr-container border border-1 rounded-3 rounded-4 overflow-hidden">
+        <img src="./images/image-qr-code.png" alt="qr-code-image">
       </div>
+      <!-- /second container for qrcode -->
+
+      <div class="info text-center">
+
+        <p>Improve your front-end skills by building projects</p>
+
+        <p>The QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+
+      </div>
+      
     </div>
     <!-- /container -->
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
   </div>
   <!-- /general container -->
 
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  
+  
 </body>
 </html>
