--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 <body>
 
   <!-- general container -->
-  <div class="wrapper">
+  <div class="wrapper p-4">
 
     <!-- container -->
-    <div class="border border-1 rounded-4 p-4">
+    <div class="box border border-1 rounded-4 p-4">
 
       <!-- second container for qrcode -->
       <div class="qr-container border border-1 rounded-3 rounded-4 overflow-hidden">
@@ -38,9 +38,9 @@
 
       <div class="info text-center">
 
-        <p>Improve your front-end skills by building projects</p>
+        <p class="fs-4 custom-p py-3">Improve your front-end skills by building projects</p>
 
-        <p>The QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+        <p class="info-text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
 
       </div>
       
